feat(beam-web): OpenAPI codegen + typed HTTP client for auth endpoints
Replace hardcoded fetch() calls with a typed client generated from the
backend's OpenAPI spec. The spec is produced at build time — not committed
— so the TypeScript CI now builds the Rust crate first, generates the
artifacts, then runs all TS checks against them.

Rust (beam-auth / beam-stream):
- Convert auth route handlers (#[handler] → #[endpoint]) with full
  OpenAPI annotations (request body schemas, typed response refs)
- Add cfg_attr(feature = "server", derive(ToSchema)) to AuthResponse /
  AuthUserResponse so the generated spec includes full response schemas
- Expose routes as pub mod in beam-stream lib.rs; update intra-crate
  imports from beam_stream:: to crate::
- Add create_docs_router() — state-free router used for spec export only
- Add examples/export_openapi.rs: prints OpenAPI JSON to stdout

TypeScript (beam-web):
- Add openapi-fetch (runtime) and openapi-typescript (codegen) deps
- Add codegen:openapi / codegen:openapi:full scripts
- Gitignore openapi.json and src/api.gen.ts (generated at build time)
- New src/lib/apiClient.ts: typed client via openapi-fetch<paths>
- User / AuthResponse types now sourced from api.gen.ts components
- Replace fetch() in login, register, logout with apiClient.POST(...)
- Exclude api.gen.ts from biome (generated file)

CI:
- Extract composite actions: setup-bun, setup-ffmpeg, install-rust-build-deps
- Add generate-openapi job to typescript.yml: compiles export_openapi,
  produces openapi.json + api.gen.ts, uploads as artifact; build /
  typecheck / test download the artifact before running
- Add Rust path triggers to typescript.yml (beam-auth/beam-stream src,
  Cargo.lock) so TS CI fires when API endpoints change
- Add path filters to rust.yml so it only runs on Rust file changes

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -38,25 +38,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-
-      - name: Cache Bun dependencies
-        id: bun-cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-            **/node_modules
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
-
-      - name: Install dependencies
-        if: steps.bun-cache.outputs.cache-hit != 'true'
-        run: bun install --frozen-lockfile
-
+      - uses: ./.github/actions/setup-bun
       - name: Biome check
         run: bun run check
