--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -86,7 +86,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: openapi-artifacts
-          path: .
+          path: beam-web
 
       - name: Build
         run: bun run build
@@ -103,7 +103,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: openapi-artifacts
-          path: .
+          path: beam-web
 
       - name: Type check
         run: bun run typecheck
@@ -120,7 +120,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: openapi-artifacts
-          path: .
+          path: beam-web
 
       - name: Run tests with coverage
         run: bun run test:coverage
