fix(ci): generate schema.graphql and gql.ts as artifacts instead of tracking in tree
- Remove beam-web/src/gql.ts from git tracking (was a stub); now generated
  from beam-stream/schema.graphql via bun run codegen in CI
- Remove beam-stream/schema.graphql from git tracking (was already gitignored
  locally); now generated from Rust types via export_schema bin in CI
- Rewrite export_schema bin to print SDL to stdout (mirrors export_openapi)
- Fix package.json export-schema script: --example → --bin, add stdout redirect
- Add gql.ts to biome excludes and openapi-artifacts upload in CI
- Drop schema.graphql path trigger (covered by beam-stream/src/**/*.rs)

--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -65,6 +65,12 @@ jobs:
       - name: Generate api.gen.ts
         run: cd beam-web && bun run codegen:openapi
 
+      - name: Generate schema.graphql
+        run: cargo run --bin export_schema -p beam-stream > beam-stream/schema.graphql
+
+      - name: Generate gql.ts
+        run: cd beam-web && bun run codegen
+
       - name: Upload OpenAPI artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -72,6 +78,7 @@ jobs:
           path: |
             beam-web/openapi.json
             beam-web/src/api.gen.ts
+            beam-web/src/gql.ts
           retention-days: 7
 
   build:
