--- a/beam-web/.gitignore
+++ b/beam-web/.gitignore
@@ -12,9 +12,9 @@ count.txt
 # Coverage output
 coverage/
 
-# GraphQL Codegen (src/gql.ts is tracked as a stub; update via `bun run codegen:full`)
-
-# OpenAPI Codegen — generated at build time from the Rust backend
-# Regenerate locally with: bun run codegen:openapi:full
+# Generated type artifacts — regenerate locally with:
+#   GraphQL:  cd beam-web && bun run codegen
+#   OpenAPI:  cd beam-web && bun run codegen:openapi:full
 openapi.json
 src/api.gen.ts
+src/gql.ts
