--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ resolver = "3"
 # http 1.3.x has a corrupted publish that fails to compile; pin to >=1.4
 http = ">=1.4, <2"
 argon2 = { version = "0.5.3", features = ["std"] }
+sha2 = "0.10"
 async-trait = "0.1"
 bb8-redis = "0.26.0"
 chrono = "0.4.43"
