--- a/beam-auth/Cargo.toml
+++ b/beam-auth/Cargo.toml
@@ -26,6 +26,7 @@ utils = [
     "dep:sea-orm",
     "dep:serde",
     "dep:serde_json",
+    "dep:sha2",
     "dep:thiserror",
     "dep:tracing",
     "dep:uuid",
@@ -60,6 +61,7 @@ salvo = { workspace = true, optional = true }
 sea-orm = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"], optional = true }
 serde_json = { workspace = true, optional = true }
+sha2 = { workspace = true, optional = true }
 thiserror = { workspace = true, optional = true }
 tracing = { workspace = true, features = ["log"], optional = true }
 uuid = { workspace = true, optional = true }
