feat(stream): move stream token from URL query param to Authorization header
Token in the URL query string leaks into server logs, browser history,
and Referrer headers. This change:

- Reads the presigned stream token from `Authorization: Bearer <token>`
  in `stream_mp4` instead of `?token=`; missing/invalid header → 401
- Updates the OpenAPI annotation to document the Authorization header
  parameter instead of the old query parameter
- Fixes a pre-existing routing bug: Salvo requires `{id}` syntax for
  path parameters, not `<id>` (the old syntax matched the literal
  string "<id>" rather than acting as a wildcard)
- Adds 5 subcutaneous HTTP tests covering: missing header, query-param
  token (old API), mismatched stream ID, tampered token signature, and
  valid Bearer token passing auth to the library lookup
- Updates beam-web media page to fetch a stream token via the API and
  play video via the Fetch API with `Authorization: Bearer`, replacing
  the plain href link

--- a/biome.json
+++ b/biome.json
@@ -46,6 +46,16 @@
 					}
 				}
 			}
+		},
+		{
+			"includes": ["beam-web/src/routes/media.$id.tsx"],
+			"linter": {
+				"rules": {
+					"a11y": {
+						"useMediaCaption": "off"
+					}
+				}
+			}
 		}
 	]
 }
